syntax = "proto3";

option go_package = "./;pb";

package users;

service Users { rpc AllUsers(AllUsersRequest) returns (AllUsersReply); }

message AllUsersRequest {
  uint32 start = 1;
  uint32 end = 2;
}

message AllUsersReply {
  uint64 go_time = 1;
  repeated User users = 2;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string username = 3;
  string gender = 4;
  uint32 age = 5;
  string email = 6;
  string tel = 7;
}
